# Food_Recommender_System_Backend

./: .gitignore  Dockerfile  alembic.ini  foods.csv  manage.py  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: FoodRouter.py  router.py
app/core/: config.py  error_codes.py  exceptions.py  logging.py
app/core/fuzzy/: membership.py
app/db/neo4j/: connection.py  insert_db.py
app/db/postgres/: connection.py  database.py  schema.py
app/models/: FoodModel.py  FoodNutritionModel.py  NutritionModel.py
app/repositories/: FoodNutritionRepository.py  FoodRepository.py  NutritionRepository.py
app/rule/: PermittedNutritionClaimsRule.py
app/services/: FoodService.py  HealthMetricsService.py  NutritionService.py  RecommenderService.py
app/utils/: api_response.py  enums.py  helpers.py  mappings.py  types.py
commands/: downgrade.py  flush.py  makemigrations.py  migrate.py  rollback.py  runserver.py  upgrade.py
data/VTN_FCT_2007/: classified_foods.jsonl
migrations/: env.py
migrations/versions/: 0144c897f03d_auto_migration.py  0a6a3524eb81_auto_migration.py  3e9bb66dbfcb_initial.py  4dbd108c6481_initial_schema.py  6a859f94f072_auto_migration.py  e8cb21958410_auto_migration.py
src/: main.py
src/core/: config.py  logging.py
src/db/: database.py  schema.py
src/preprocessing/: config.py  insert2db.py  temp.py  tsv2json.py
src/services/: food_service.py  nutrition_service.py
