[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "food-recommender"
version = "0.1.0"
description = "Food recommendation system"
authors = [
    { 
        name="Kim Nguyen Viet" 
    }
]
dependencies = [
    "alembic==1.18.4",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "dotenv==0.9.9",
    "fastapi==0.135.1",
    "greenlet==3.3.2",
    "idna==3.11",
    "mako==1.3.10",
    "markupsafe==3.0.3",
    "numpy==2.4.2",
    "pandas==3.0.1",
    "psycopg2==2.9.11",
    "psycopg2-binary==2.9.11",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "six==1.17.0",
    "sqlalchemy==2.0.48",
    "starlette==0.52.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3"
]