[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.fastapi]
entrypoint = "app.main:app"

[project]
name = "food-recommender"
version = "0.1.0"
description = "Food recommendation system"
authors = [
    { name = "Kim Nguyen Viet" }
]
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.1",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.12.5",
    "requests>=2.34.2",
    "six>=1.17.0",
    "sqlalchemy>=2.0.48",
    "uuid6>=2025.0.1",
    "uvicorn>=0.49.0",
]
[tool.setuptools.packages.find]
include = [
    "app*",
    "commands*",
]
